--- a/EOnSpotShop/EOnSpotShop/Server/appsettings.json
+++ b/EOnSpotShop/EOnSpotShop/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LOCALMACHINE\\MSSQLSERVER2019;Database=ShopOnSpot;Trusted_Connection = true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
